--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["framework", "nette", "simple", "flame", "jsifalda", "tools"],
   "homepage": "https://github.com/flame-org/Form-Factory",
   "license": "BSD-2-Clause-FreeBSD",
-  "minimum-stability": "dev",
+  "minimum-stability": "beta",
 
   "authors": [
     {
@@ -21,7 +21,9 @@
 
   "require": {
     "php": ">=5.3.2",
-    "nette/nette": ">=2.1.0"
+    "nette/application": "~2.2-beta1",
+    "nette/forms": "~2.2-beta1",
+    "nette/di": "~2.2-beta1"
   },
 
   "config": {
